# calcpp

./: CMakeLists.txt  README.md
include/: calculator.h
src/: calculator.cpp  get_diff.cpp  get_mod.cpp  get_operator.cpp  get_pro.cpp  get_quo.cpp  get_sum.cpp
